--- a/Application.RFPUI/ClientApp/src/app/proposals/planner-view/planner-view.component.html
+++ b/Application.RFPUI/ClientApp/src/app/proposals/planner-view/planner-view.component.html
@@ -68,103 +68,9 @@
       <mat-tab-group (selectedTabChange)="tabSelection($event)" mat-stretch-tabs [selectedIndex]="selectedTab">
         <mat-tab label="Basic Info">
           <div class="proposalTab">
-            <form id="proposalBasic" [formGroup]="formBasicProposal">
-              <div class="row">
-                <div class="col-lg-3">
-                  <mat-label>Opportunity Name <label>*</label></mat-label>
-                  <mat-form-field appearance="outline">
-                    <input matInput formControlName="opportunityName" required readonly maxlength="50">
-                  </mat-form-field>
-                </div>
-                <div class="col-lg-3">
-                  <mat-label>Customer <label>*</label></mat-label>
-                  <mat-form-field appearance="outline">
-                    <input matInput formControlName="customer" required readonly maxlength="50">
-                  </mat-form-field>
-                </div>
-                <div class="col-lg-3">
-                  <mat-label>Location <label>*</label></mat-label>
-                  <mat-form-field appearance="outline">
-                    <mat-select matinput formControlName="locationID" required readonly>
-                      <mat-option *ngFor="let data of locations" value="{{data.id}}">{{data.locationName}}</mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>
-                <div class="col-lg-3">
-                  <mat-label>RFP Code</mat-label>
-                  <mat-form-field appearance="outline">
-                    <input matInput placeholder="RFP Code" formControlName="rfpCode" readonly maxlength="50">
-                  </mat-form-field>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-3">
-                  <mat-label>Request Type <label>*</label></mat-label>
-                  <mat-form-field appearance="outline">
-                    <mat-select matinput formControlName="requestType" required readonly>
-                      <mat-option *ngFor="let data of requestTypes" value="{{data.requestTypeName}}">{{data.requestTypeName}}</mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>
-                <div class="col-lg-3">
-                  <mat-label> Practice Name <label>*</label></mat-label>
-                  <mat-form-field appearance="outline">
-                    <mat-select matinput formControlName="practiceID" required readonly (selectionChange)="streamChange($event.value)">
-                      <mat-option *ngFor="let data of practiceTypes" value="{{data.streamId}}">{{data.streamName}}</mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>
-                <div class="col-lg-3">
-                  <mat-label> Practice Lead <label>*</label></mat-label>
-                  <mat-form-field appearance="outline">
-                    <mat-select matinput formControlName="practiceLead" required>
-                      <mat-option *ngFor="let data of practiceLeads" value="{{data.employeeName}}">{{data.employeeName}}</mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>
-                <div class="col-lg-3">
-                  <mat-label>Sales point of contact</mat-label>
-                  <mat-form-field appearance="outline">
-                    <input matInput formControlName="poc" maxlength="5">
-                  </mat-form-field>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-3">
-                  <mat-label>Released Date <label>*</label></mat-label>
-                  <mat-form-field appearance="outline">
-                    <input matInput [matDatepicker]="releasePicker" required readonly formControlName="releaseDate" [max]="formBasicProposal.controls['rfpSubmissionDate'].value">
-                    <mat-datepicker-toggle matSuffix [for]="releasePicker"></mat-datepicker-toggle>
-                    <mat-datepicker #releasePicker></mat-datepicker>
-                  </mat-form-field>
-                </div>
-                <div class="col-lg-3">
-                  <mat-label>Submission Date <label>*</label></mat-label>
-                  <mat-form-field appearance="outline">
-                    <input matInput [matDatepicker]="submissionPicker" required readonly formControlName="rfpSubmissionDate" [min]="formBasicProposal.controls['releaseDate'].value">
-                    <mat-datepicker-toggle matSuffix [for]="submissionPicker"></mat-datepicker-toggle>
-                    <mat-datepicker #submissionPicker></mat-datepicker>
-                  </mat-form-field>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-6">
-                  <mat-label>Description</mat-label>
-                  <mat-form-field appearance="outline">
-                    <textarea rows="3" matInput multiline formControlName="description" maxlength="250"></textarea>
-                  </mat-form-field>
-                </div>
-                <div class="col-lg-6">
-                  <mat-label>Scope</mat-label>
-                  <mat-form-field appearance="outline">
-                    <textarea rows="3" matInput multiline formControlName="scope" maxlength="250"></textarea>
-                  </mat-form-field>
-                </div>
-              </div>
-            </form>
+            <app-basic-proposal [new]="false"></app-basic-proposal>
             <div>
               <button class="btn btn-info pull-right" (click)="next()">Next</button>
-              <button class="btn btn-success pull-right" type="submit" (click)="save()">Save</button>
             </div>
           </div>
         </mat-tab>
