--- a/Application.RFPUI/ClientApp/src/app/proposals/planner-view/planner-view.component.css
+++ b/Application.RFPUI/ClientApp/src/app/proposals/planner-view/planner-view.component.css
@@ -1,3 +1,7 @@
+mat-tab-group {
+  height: calc(100vh - 250px)
+}
+
 ::ng-deep .mat-tab-label-active {
   background-color: #00163b !important;
   border: 2px solid #00163b !important;
@@ -30,9 +34,8 @@
 }
 
 .proposalTab {
-  /*overflow: auto;*/
-  overflow-x: auto;
-  /*height: 380px;*/
+  overflow: auto;
+  /*height: calc(100vh - 150px);*/
   padding: 15px;
 }
 
