--- a/Application.RFPUI/ClientApp/src/app/proposals/planner-view/pricing/pricing.component.html
+++ b/Application.RFPUI/ClientApp/src/app/proposals/planner-view/pricing/pricing.component.html
@@ -1,13 +1,12 @@
 <div class="pricingSection">
   <div>
-    <button class="btn btn-sm btn-success" type="submit" (click)="save()">Save</button>
+    <button class="btn btn-sm btn-info" type="submit" (click)="save()">Save</button>
+    <button class="btn btn-sm btn-secondary" (click)="addNewRecord()">Add New</button>
   </div>
   <br/>
   <div>
     <ag-grid-angular style="width: 100%; height: calc(100vh - 400px);"
-                     class="ag-theme-balham"
-                     [rowData]="rowData"
-                     [columnDefs]="columnDefs"
+                      class="ag-theme-balham"
                       [gridOptions]="gridOptionsPricing"
                       [suppressRowTransform]=true>
     </ag-grid-angular>
