--- a/Application.RFPUI/ClientApp/src/app/proposals/planner-proposal/basic-proposal/basic-proposal.component.html
+++ b/Application.RFPUI/ClientApp/src/app/proposals/planner-proposal/basic-proposal/basic-proposal.component.html
@@ -23,8 +23,8 @@
       </div>
       <div class="col-lg-3">
         <mat-label>RFP Code</mat-label>
-        <mat-form-field appearance="outline" disabled>
-          <input matInput placeholder="RFP Code" formControlName="rfpCode" readonly maxlength="50">
+        <mat-form-field appearance="outline">
+          <input matInput placeholder="RFP Code" formControlName="rfpCode" maxlength="50">
         </mat-form-field>
       </div>
     </div>
