--- a/Application.RFPUI/ClientApp/src/styles.css
+++ b/Application.RFPUI/ClientApp/src/styles.css
@@ -7,6 +7,11 @@ body {
   font-size: 12px !important;
 }
 
+.modal-body {
+  position: relative;
+  padding: 3px 15px !important;
+}
+
 .confirm-dialog-container .mat-dialog-container {
   border-radius: .25em .25em .4em .4em;
   padding: 0px;
@@ -229,4 +234,66 @@ mat-label label {
   stroke: none;
   fill: #fff;
   background: #414141;
+}
+
+/*Scrolling Text*/
+.example1 {
+  height: 20px;
+  overflow: hidden;
+  position: relative;
+}
+
+  .example1 p {
+    font-size: 16px;
+    font-weight: 700;
+    font-style: italic;
+    color: limegreen;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    line-height: 16px;
+    text-align: center;
+    /* Starting position */
+    -moz-transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+    /* Apply animation to this element */
+    -moz-animation: example1 25s linear infinite;
+    -webkit-animation: example1 25s linear infinite;
+    animation: example1 25s linear infinite;
+  }
+/* Move it (define the animation) */
+@-moz-keyframes example1 {
+  0% {
+    -moz-transform: translateX(100%);
+  }
+
+  100% {
+    -moz-transform: translateX(-100%);
+  }
+}
+
+@-webkit-keyframes example1 {
+  0% {
+    -webkit-transform: translateX(100%);
+  }
+
+  100% {
+    -webkit-transform: translateX(-100%);
+  }
+}
+
+@keyframes example1 {
+  0% {
+    -moz-transform: translateX(100%); /* Firefox bug fix */
+    -webkit-transform: translateX(100%); /* Firefox bug fix */
+    transform: translateX(100%);
+  }
+
+  100% {
+    -moz-transform: translateX(-100%); /* Firefox bug fix */
+    -webkit-transform: translateX(-100%); /* Firefox bug fix */
+    transform: translateX(-100%);
+  }
 }
