--- a/Application.RFPUI/ClientApp/src/app/proposals/proposals.component.css
+++ b/Application.RFPUI/ClientApp/src/app/proposals/proposals.component.css
@@ -1,6 +1,6 @@
 .table-div {
   width: 100%;
-  max-height: calc(100vh - 175px );
+  height: calc(100vh - 135px );
   overflow: auto;
   padding: 0;
 }
