--- a/Application.RFPUI/ClientApp/src/styles.css
+++ b/Application.RFPUI/ClientApp/src/styles.css
@@ -243,26 +243,34 @@ mat-label label {
   position: relative;
 }
 
-  .example1 p {
-    font-size: 16px;
-    font-weight: 700;
-    font-style: italic;
-    color: limegreen;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    line-height: 16px;
-    text-align: center;
-    /* Starting position */
-    -moz-transform: translateX(100%);
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
-    /* Apply animation to this element */
-    -moz-animation: example1 25s linear infinite;
-    -webkit-animation: example1 25s linear infinite;
-    animation: example1 25s linear infinite;
-  }
+.rfp7 p {
+  color: red !important;
+}
+
+.rfp15 p {
+  color: orange !important;
+}
+
+.example1 p {
+  font-size: 16px;
+  font-weight: 700;
+  font-style: italic;
+  color: limegreen;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  line-height: 16px;
+  text-align: center;
+  /* Starting position */
+  -moz-transform: translateX(100%);
+  -webkit-transform: translateX(100%);
+  transform: translateX(100%);
+  /* Apply animation to this element */
+  -moz-animation: example1 25s linear infinite;
+  -webkit-animation: example1 25s linear infinite;
+  animation: example1 25s linear infinite;
+}
 /* Move it (define the animation) */
 @-moz-keyframes example1 {
   0% {
