--- a/Application.RMGUI/ClientApp/src/app/top/top.component.html
+++ b/Application.RMGUI/ClientApp/src/app/top/top.component.html
@@ -5,16 +5,16 @@
                [opened]="(isHandset$ | async) === true">
     <mat-toolbar style="background-color:rgb(0,66,128) !important; color:white; font-weight:bold;">Menu</mat-toolbar>
     <mat-nav-list>
-      <mat-expansion-panel *ngIf="userRole==='ADMIN'|| userRole==='COE'|| userRole==='DM'|| userRole==='FINANCE'|| userRole==='HR'|| userRole==='HR_ADMIN'|| userRole==='PH'|| userRole==='PM'|| userRole==='RMG'||  userRole==='TA'||  userRole==='TA_ADMIN'">
+      <mat-expansion-panel >
         <mat-expansion-panel-header>
           <mat-panel-title>
             <b>Resource Management</b>
           </mat-panel-title>
         </mat-expansion-panel-header>
         <!--<li routerLinkActive="active"><a routerLink="/assignProjects" role="button"> Assign Project</a></li>-->
-        <li *ngIf="userRole==='ADMIN'|| userRole==='COE'|| userRole==='DM'|| userRole==='HR_ADMIN'|| userRole==='PH'|| userRole==='PM'|| userRole==='RMG'|| userRole==='TA_ADMIN'" routerLinkActive="active"><a routerLink="/resourcereq" role="button">Resource Request</a></li>
-        <li *ngIf="userRole==='ADMIN'|| userRole==='DM'|| userRole==='PM'" routerLinkActive="active"><a routerLink="/roles" role="button">Project Roles</a></li>
-        <li *ngIf="userRole==='ADMIN'|| userRole==='COE'|| userRole==='DM'|| userRole==='HR'|| userRole==='HR_ADMIN'|| userRole==='PH'|| userRole==='PM'|| userRole==='RMG'  " routerLinkActive="active"><a routerLink="/EmpProjInfo" role="button">Employee-Project Information</a></li>
+        <li  routerLinkActive="active"><a routerLink="/resourcereq" role="button">Resource Request</a></li>
+        <li  routerLinkActive="active"><a routerLink="/roles" role="button">Project Roles</a></li>
+        <li  routerLinkActive="active"><a routerLink="/EmpProjInfo" role="button">Employee-Project Information</a></li>
       </mat-expansion-panel>
       <!--<mat-expansion-panel *ngIf="false">
         <mat-expansion-panel *ngIf="userRole==='ADMIN'|| userRole==='COE'|| userRole==='HR_ADMIN'|| userRole==='PH'||  userRole==='TA'||  userRole==='TA_ADMIN'">
@@ -34,17 +34,17 @@
         <li style="border:none" routerLinkActive="active"><a routerLink="/assessment" role="button">Assessment</a></li>
 
       </mat-expansion-panel>-->
-      <mat-expansion-panel *ngIf="userRole==='ADMIN'|| userRole==='COE'|| userRole==='DM'|| userRole==='FINANCE'|| userRole==='HR'|| userRole==='HR_ADMIN'|| userRole==='OP'|| userRole==='PH'|| userRole==='PM'|| userRole==='RMG'||  userRole==='TA'||  userRole==='TA_ADMIN'">
+      <mat-expansion-panel >
         <mat-expansion-panel-header>
           <mat-panel-title>
             <b>Master</b>
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <li *ngIf="userRole==='ADMIN'|| userRole==='COE'|| userRole==='DM'|| userRole==='FINANCE'|| userRole==='HR'|| userRole==='HR_ADMIN'|| userRole==='OP'|| userRole==='PH'|| userRole==='PM'|| userRole==='RMG'||userRole==='TA_ADMIN'||userRole==='TA'" routerLinkActive="active"><a routerLink="/employee" role="button">Employee</a></li>
-        <li *ngIf="userRole==='ADMIN'|| userRole==='COE'|| userRole==='DM'|| userRole==='FINANCE'||  userRole==='OP'|| userRole==='PH'|| userRole==='PM'|| userRole==='RMG'||  userRole==='TA'||  userRole==='TA_ADMIN'" routerLinkActive="active"><a routerLink="/projects" role="button">Projects</a></li>
-        <li *ngIf="userRole==='ADMIN'|| userRole==='COE'|| userRole==='DM'|| userRole==='FINANCE'||  userRole==='OP'|| userRole==='PH'|| userRole==='PM'|| userRole==='RMG'||  userRole==='TA'||  userRole==='TA_ADMIN'" style="border:none" routerLinkActive="active"><a routerLink="/customers" role="button">Customers</a></li>
+        <li  routerLinkActive="active"><a routerLink="/employee" role="button">Employee</a></li>
+        <li  routerLinkActive="active"><a routerLink="/projects" role="button">Projects</a></li>
+        <li  style="border:none" routerLinkActive="active"><a routerLink="/customers" role="button">Customers</a></li>
       </mat-expansion-panel>
-      <mat-expansion-panel *ngIf="userRole==='ADMIN'|| userRole==='COE'|| userRole==='DM'|| userRole==='FINANCE'|| userRole==='HR'|| userRole==='HR_ADMIN'|| userRole==='OP'|| userRole==='PH'|| userRole==='PM'|| userRole==='RMG'||  userRole==='TA'||  userRole==='TA_ADMIN'">
+      <mat-expansion-panel >
         <mat-expansion-panel-header>
           <mat-panel-title>
             <b>Reports</b>
@@ -56,7 +56,7 @@
         <!--<li routerLinkActive="active"><a routerLink="/skills" role="button">Employee Skills</a></li>-->
       </mat-expansion-panel>
 
-      <mat-expansion-panel *ngIf="userRole==='ADMIN'">
+      <mat-expansion-panel >
         <mat-expansion-panel-header>
           <mat-panel-title>
             <b>Admin</b>
