--- a/Application.RFPUI/ClientApp/src/app/proposals/planner-view/schedule/schedule.component.html
+++ b/Application.RFPUI/ClientApp/src/app/proposals/planner-view/schedule/schedule.component.html
@@ -1,1 +1,16 @@
-<p>schedule works!</p>
+<div class="scheduleSection">
+  <div>
+    <button class="btn btn-sm btn-outline-primary" (click)="addNewRecord()">Add New</button>
+    <button class="btn btn-sm btn-primary" type="submit" (click)="save()">Save</button>
+    <!--<button class="btn btn-sm btn-outline-danger" (click)="delete()">Delete</button>-->
+  </div>
+  <div>
+    <ag-grid-angular style="width: 100%; height: calc(100vh - 410px);"
+                     class="ag-theme-balham"
+                     [gridOptions]="gridOptionsSchedule"
+                     [components]="components"
+                     [suppressRowTransform]=true>
+    </ag-grid-angular>
+  </div>
+</div>
+
