--- a/Application.RFPUI/ClientApp/src/app/proposals/proposals.component.css
+++ b/Application.RFPUI/ClientApp/src/app/proposals/proposals.component.css
@@ -7,7 +7,7 @@
 
 mat-table {
   width: 100%;
-  min-width: 1400px;
+  min-width: 1200px;
   padding: 0;
 }
 
@@ -63,7 +63,7 @@ mat-header-cell:nth-child(1) {
 mat-cell:nth-child(2) {
   margin-left: 0px 15px 0px 15px;
   padding: 20px;
-  width: 200px;
+  width: 150px;
   flex: none;
   float: left;
   font-size: 12px;
@@ -72,7 +72,7 @@ mat-cell:nth-child(2) {
 mat-header-cell:nth-child(2) {
   margin-left: 0px 15px 0px 15px;
   padding: 20px;
-  width: 200px;
+  width: 150px;
   flex: none;
   font-size: 14px;
   font-weight: bold;
@@ -81,7 +81,7 @@ mat-header-cell:nth-child(2) {
 mat-cell:nth-child(3) {
   margin-left: 0px 15px 0px 15px;
   padding: 20px;
-  width: 300px;
+  width: 110px;
   flex: none;
   float: left;
   font-size: 12px;
@@ -90,7 +90,7 @@ mat-cell:nth-child(3) {
 mat-header-cell:nth-child(3) {
   margin-left: 0px 15px 0px 15px;
   padding: 20px;
-  width: 300px;
+  width: 110px;
   flex: none;
   font-size: 14px;
   font-weight: bold;
@@ -99,7 +99,7 @@ mat-header-cell:nth-child(3) {
 mat-cell:nth-child(4) {
   margin-left: 0px 15px 0px 15px;
   padding: 20px;
-  width: 200px;
+  width: 250px;
   flex: none;
   float: left;
   font-size: 12px;
@@ -108,7 +108,7 @@ mat-cell:nth-child(4) {
 mat-header-cell:nth-child(4) {
   margin-left: 0px 15px 0px 15px;
   padding: 20px;
-  width: 200px;
+  width: 250px;
   flex: none;
   font-size: 14px;
   font-weight: bold;
@@ -117,7 +117,7 @@ mat-header-cell:nth-child(4) {
 mat-cell:nth-child(5) {
   margin-left: 0px 15px 0px 15px;
   padding: 20px;
-  width: 200px;
+  width: 150px;
   flex: none;
   float: left;
   font-size: 12px;
@@ -126,7 +126,7 @@ mat-cell:nth-child(5) {
 mat-header-cell:nth-child(5) {
   margin-left: 0px 15px 0px 15px;
   padding: 20px;
-  width: 200px;
+  width: 150px;
   flex: none;
   font-size: 14px;
   font-weight: bold;
@@ -150,8 +150,41 @@ mat-header-cell:nth-child(6) {
   font-weight: bold;
 }
 
+mat-cell:nth-child(7) {
+  margin-left: 0px 15px 0px 15px;
+  padding: 20px;
+  width: 180px;
+  flex: none;
+  float: left;
+  font-size: 12px;
+}
+
+mat-header-cell:nth-child(7) {
+  margin-left: 0px 15px 0px 15px;
+  padding: 20px;
+  width: 180px;
+  flex: none;
+  font-size: 14px;
+  font-weight: bold;
+}
+
 .btnMd {
   background-color: palegoldenrod;
+}
+
+.btnApprove {
+  background-color: lightgreen;
+  height: 40px;
+  width: 40px;
+  padding: 6px;
+  margin-right: 6px;
+}
+
+.btnReject {
+  background-color: lightcoral;
+  height: 40px;
+  width: 40px;
+  padding: 6px;
 }
 
 .searchBox {
